[package]
name = "prometheus_mikrotik_exporter"
version = "0.1.0"
authors = ["J2ghz <j2.00ghz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus_exporter_base = "0.31"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }